# supriya-midi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  api.html  basic-usage.html  changelog.html  genindex.html  index.html  installation.html  main.py  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  sitemap.xml
.github/workflows/: gh-pages.yaml  publish.yaml  release.yaml  test.yaml
_sources/: basic-usage.rst.txt  installation.rst.txt
_static/: documentation_options.js
dev/: bump-version.py
docs/source/: api.rst  basic-usage.rst  changelog.rst  conf.py  index.rst  quickstart.rst
docs/source/api/: constants.rst  core.rst  index.rst  messages.rst  rtmidi_ext.rst
src/supriya_midi/: __init__.py  _midi.cpp  _midi.pyi  _version.py  constants.py  core.py  messages.py  rtmidi_ext.cpp  rtmidi_ext.pyi
tests/: conftest.py  test_basic.py  test_delete.py  test_error_callback.py  test_port_number.py  test_rtmidi.py  test_set_client_name.py  test_set_port_name.py  test_virtual_ports.py  test_wheels.py
