[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >= 0.12", "nanobind >= 2.12"]

[project]
name = "supriya-midi"
version = "0.1.0"
description = "Python  RTMidi Bindings"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "nanobind >= 2.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sphinx-immaterial>=0.13.9",
    "ty>=0.0.24",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest -v -m ci {package}/tests/"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y alsa-lib-devel alsa-utils jack-audio-connection-kit-devel",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add alsa-lib-dev alsa-utils jack-dev",
]

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.13"}

[tool.docformatter]
black = true
close-quotes-on-newline = true
make-summary-multi-line = true
pre-summary-newline = true

[tool.pytest]
markers = ["ci: mark test for use in cibuildwheel"]
testpaths = ["tests/"]

[tool.scikit-build]
sdist.include = ["ext/"]
wheel.exclude = ["*.cpp"]
wheel.packages = ["src/supriya_midi"]
